@@ -1,3 +1,7 @@
+Mon May 29 15:00:39 2000  Raph Levien  <raph@acm.org>
+
+	* Makefile.am: Moved relevant .h files into HEADERS stanza.
+
 Mon May 29 13:48:49 2000  Raph Levien  <raph@acm.org>
 
 	This is a fairly major commit, as it adds both the new, modular
